--- a/stylesheet.css
+++ b/stylesheet.css
@@ -87,9 +87,19 @@ li {
 
 footer {
     text-align: center;
+    font-size: small;
 }
 
 @media only screen and (max-width:768px) {
+    .navbar {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    .nav {
+        margin-top: 10px;
+    }
     .portfolio {
         display: grid;
         grid-template-columns: 1fr;
